Fixed name display overflow on some views

--- a/src/index.css
+++ b/src/index.css
@@ -329,7 +329,6 @@ iframe {
 /* ---- END -----*/
 
 
-
 .full-width {
     width: 100%;
 }
@@ -3190,9 +3189,13 @@ ul {
 }
 
 .draggable-position-name {
-    display: block;
-    color: #000;
-    margin-bottom: 4px;
+    line-height: 1.2;
+    max-height: calc(1.2em * 3);
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow-wrap: anywhere;
 }
 
 .draggable-position-description {
